src/Common Files/frames.h

         //---------- ATO flux calls -------------------
    void FRAMES_API atoGetFluxType(int dsIdx, int fluxIdx, char *name);
  double FRAMES_API atoGetFluxRadius(int dsIdx, int fluxIdx);
    void FRAMES_API atoGetFluxRadiusUnits(int dsIdx, int fluxIdx, char *name);
    void FRAMES_API atoGetFluxDensityUnits(int dsIdx, int fluxIdx, char *name);
         //---------- ATO constituent (and Progeny) calls --------------
    void FRAMES_API atoGetCasID(int dsIdx, int conIdx, int progIdx, char *name);
    void FRAMES_API atoGetChemName(int dsIdx, int conIdx, int progIdx, char *name);
    void FRAMES_API atoGetParentCasID(int dsIdx, int conIdx, int progIdx, char *name);
    void FRAMES_API atoGetParentChemName(int dsIdx, int conIdx, int progIdx, char *name);
     int FRAMES_API atoGetProgenyCount(int dsIdx, int conIdx);
         //---------- ATO time period calls ------------------
     int FRAMES_API atoGetTimePeriodCount(int dsIdx, int conIdx, int progIdx);
     int FRAMES_API atoGetTimePeriodOutputCount(int dsIdx, int conIdx, int progIdx, int timeIdx);
    void FRAMES_API atoGetTimePeriodUnit(int dsIdx, int conIdx, int progIdx, int timeIdx, char *name);
  double FRAMES_API atoGetTimePeriodTime(int dsIdx, int conIdx, int progIdx, int timeIdx);
         //---------- ATO grid calls -------------------------
    void FRAMES_API atoGetGridAxis1Unit(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);
    void FRAMES_API atoGetGridAxis2Unit(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);
    void FRAMES_API atoGetGridDataUnit(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);
    void FRAMES_API atoGetGridMoist(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);
     int FRAMES_API atoGetGridFluxIndex(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID);
    void FRAMES_API atoGetGridOutputType(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);
  double FRAMES_API atoGetGridMax(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, double& xCoord, double& yCoord);
  double FRAMES_API atoGetGridMin(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, double& xCoord, double& yCoord);
  double FRAMES_API atoGetGridValue(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, int axis1, int axis2);
     int FRAMES_API atoGetGridAxis1Count(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID);
     int FRAMES_API atoGetGridAxis2Count(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID);
  double FRAMES_API atoGetGridAxis1Value(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, int Idx);
  double FRAMES_API atoGetGridAxis2Value(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, int Idx);
         //---------- ATO timeseries calls-------------------------
     int FRAMES_API atoGetTimeSeries(int dsIdx, int conIdx, int progIdx, char *product, char *flux, char *moist, double x, double y);
  double FRAMES_API atoGetTimeSeriesTime(int dsIdx, int conIdx, int progIdx, int timeIdx);
  double FRAMES_API atoGetTimeSeriesValue(int dsIdx, int conIdx, int progIdx, int timeIdx);
    void FRAMES_API atoGetTimeSeriesXAxisUnit(int dsIdx, int conIdx, int progIdx, char *unit);
    void FRAMES_API atoGetTimeSeriesYAxisUnit(int dsIdx, int conIdx, int progIdx, char *unit);
    void FRAMES_API atoAggregate(char *filename, char *casList);
    void FRAMES_API atoInsert(char *filename, char *casList, char *nameList, char *degList, char *secList, int branching);
    //BBFClass
    void FRAMES_API bbfOpen(char *fuiname, char *modId);
    void FRAMES_API bbfClose();
     int FRAMES_API bbfGetNumRunInfo();
     int FRAMES_API bbfGetRunInfo(int Idx, char *info);
     int FRAMES_API bbfGetNumSets();
     int FRAMES_API bbfGetSetInfo(int dsIdx, char *name, char *type);
     int FRAMES_API bbfGetNumVULevels(int dsIdx);
     int FRAMES_API bbfGetVULevel(int dsIdx, int vuIdx, char *variability, char *uncertainty);
     int FRAMES_API bbfGetNumOrganism(int dsIdx);
     int FRAMES_API bbfGetOrganismName(int dsIdx, int orgIdx, char *name, char *id);
     int FRAMES_API bbfGetNumContam(int dsIdx, int orgIdx);
     int FRAMES_API bbfGetNumProgeny(int dsIdx, int orgIdx, int conIdx);
     int FRAMES_API bbfGetContamName(int dsIdx, int orgIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API bbfGetSeriesProperties(int dsIdx, int orgIdx, int conIdx, int progIdx, char *concunits, char *timeunits);
     int FRAMES_API bbfGetSeriesValues(int dsIdx, int orgIdx, int conIdx, int progIdx, int vuIdx, int count, double *times, double *values);
     int FRAMES_API epfOpen(char *fuiname, char *modId);
    void FRAMES_API epfClose();
     int FRAMES_API epfGetNumRunInfo();
     int FRAMES_API epfGetRunInfo(int Idx, char *info);
     int FRAMES_API epfGetSetInfo(int dsIdx, int *numLoc, char *typ, char *med, char *exp);
     int FRAMES_API epfGetExposurePoint(int dsIdx, int locIdx, double *xp, double *yp);
     int FRAMES_API epfGetTimeCount(int dsIdx, char *parentCAS);
  double FRAMES_API epfGetTime(int dsIdx, char *parentCAS, int timeIdx);
     int FRAMES_API epfLoadRoutesAndPathwaysByTime(int dsIdx, char *cas, char *parentCAS, int timeIdx);
    void FRAMES_API epfGetRouteAndPathway(int dsIdx, int expIdx, char *path, char *route, char *unit);
     int FRAMES_API epfLoadTimeSeries(int dsIdx, int locIdx, char *cas, char *parentCAS, char *path, char *route);
    void FRAMES_API epfGetTimeSeries(int dsIdx, double *stime, double *svalue);
    void FRAMES_API epfGetTimeAndValue(int dsIdx, int idx, double *stime, double *svalue);
  double FRAMES_API epfGetDuration(int dsIdx);
    void FRAMES_API epfAggregate(char *filename, char *casList);
//RIFRead.cpp
    bool FRAMES_API rifChecksum();
     int FRAMES_API rifOpen(char *fuiname, char *modId);
    void FRAMES_API rifClose();
     int FRAMES_API rifGetNumRunInfo();
     int FRAMES_API rifGetRunInfo(int Idx, char *info);
     int FRAMES_API rifGetSetInfo(int dsIdx, int *numLoc, int *numAge, char *typ, char *med, char *exp);
     int FRAMES_API rifGetExposurePoint(int dsIdx, int locIdx, double *xp, double *yp);
     int FRAMES_API rifGetTimeCount(int dsIdx, int ageIdx, char *parentCAS);
    void FRAMES_API rifAggregate(char *filename, char *casList);