Common Files/Frames.bas

Public Declare Sub DLLatoGetFluxType Lib "Frames" Alias "atoGetFluxType" (ByVal dsIdx As Long, ByVal fluxIndex As Long, ByVal name As String)
Public Declare Sub DLLatoGetFluxRadiusUnits Lib "Frames" Alias "atoGetFluxRadiusUnits" (ByVal dsIdx As Long, ByVal fluxIndex As Long, ByVal name As String)
Public Declare Sub DLLatoGetFluxDensityUnits Lib "Frames" Alias "atoGetFluxDensityUnits" (ByVal dsIdx As Long, ByVal fluxIndex As Long, ByVal name As String)
Public Declare Function atoGetFluxRadius Lib "Frames" (ByVal dsIdx As Long, ByVal fluxIndex As Long) As Double
'//----------- ATO constituent calls ------------------------
Public Declare Sub DLLatoGetCasID Lib "Frames" Alias "atoGetCasID" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal name As String)
Public Declare Sub DLLatoGetChemName Lib "Frames" Alias "atoGetChemName" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal name As String)
Public Declare Sub DLLatoGetParentCasID Lib "Frames" Alias "atoGetParentCasID" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal name As String)
Public Declare Sub DLLatoGetParentChemName Lib "Frames" Alias "atoGetParentChemName" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal name As String)
Public Declare Function atoGetProgenyCount Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long) As Long
'//----------- ATO time period calls ------------------------
Public Declare Sub DLLatoGetTimePeriodUnit Lib "Frames" Alias "atoGetTimePeriodUnit" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal name As String)
Public Declare Function atoGetTimePeriodCount Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long) As Long
Public Declare Function atoGetTimePeriodOutputCount Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long) As Long
Public Declare Function atoGetTimePeriodTime Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long) As Double
'//----------- ATO grid calls -------------------------------
Public Declare Sub DLLatoGetGridAxis1Unit Lib "Frames" Alias "atoGetGridAxis1Unit" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Sub DLLatoGetGridAxis2Unit Lib "Frames" Alias "atoGetGridAxis2Unit" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Sub DLLatoGetGridDataUnit Lib "Frames" Alias "atoGetGridDataUnit" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Function atoGetGridFluxIndex Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long) As Long
Public Declare Sub DLLatoGetGridOutputType Lib "Frames" Alias "atoGetGridOutputType" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Sub DLLatoGetGridMoist Lib "Frames" Alias "atoGetGridMoist" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Function atoGetGridMax Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByRef xCoord As Double, ByRef yCoord As Double) As Double
Public Declare Function atoGetGridMin Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByRef xCoord As Double, ByRef yCoord As Double) As Double
Public Declare Function atoGetGridValue Lib "Frames" (ByVal dsID As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal axis1 As Long, ByVal axis2 As Long) As Double
Public Declare Function atoGetGridAxis1Count Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long) As Long
Public Declare Function atoGetGridAxis2Count Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long) As Long
Public Declare Function atoGetGridAxis1Value Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal Index As Long) As Double
Public Declare Function atoGetGridAxis2Value Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal Index As Long) As Double
'//----------- ATO timeseries calls -------------------------
Public Declare Function atoGetTimeSeries Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal output As String, ByVal flux As String, ByVal moist As String, ByVal xCoord As Double, ByVal yCoord As Double) As Long
Public Declare Function atoGetTimeSeriesTime Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal n As Long) As Double
Public Declare Function atoGetTimeSeriesValue Lib "Frames" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal n As Long) As Double
Public Declare Sub DLLatoGetTimeSeriesXAxisUnit Lib "Frames" Alias "atoGetTimeSeriesXAxisUnit" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal unit As String)
Public Declare Sub DLLatoGetTimeSeriesYAxisUnit Lib "Frames" Alias "atoGetTimeSeriesYAxisUnit" (ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal unit As String)
'//----------- ATO degradation chain coversion calls --------
Public Declare Sub atoAggregate Lib "Frames" (ByVal filename As String, ByVal casList As String)
Public Declare Sub atoInsert Lib "Frames" (ByVal filename As String, ByVal casList As String, ByVal nameList As String, ByVal degList As String, ByVal secList As String, ByVal branching As Long)
'//--------------------------------------------------------------------------------------
'//----------- BBF calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Sub bbfOpen Lib "Frames" (ByVal FUIName As String, ByVal modId As String)
Public Declare Sub bbfClose Lib "Frames" ()
Public Declare Function bbfGetNumRunInfo Lib "Frames" () As Long
Public Declare Function bbfGetNumSets Lib "Frames" () As Long
Public Declare Function bbfGetNumVULevels Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function bbfGetNumOrganism Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function bbfGetNumContam Lib "Frames" (ByVal dsIdx As Long, ByVal orgIdx As Long) As Long
Public Declare Function bbfGetNumProgeny Lib "Frames" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal conIdx As Long) As Long
Public Declare Function bbfGetSeriesValues Lib "Frames" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal vuIdx As Long, ByVal count As Long, ByRef times As Double, ByRef values As Double) As Long
Public Declare Function DLLbbfGetRunInfo Lib "Frames" Alias "bbfGetRunInfo" (ByVal Idx As Long, ByVal info As String) As Long
Public Declare Function DLLbbfGetSetInfo Lib "Frames" Alias "bbfGetSetInfo" (ByVal dsIdx As Long, ByVal dsname As String, ByVal dstype As String) As Long
Public Declare Function DLLbbfGetVULevel Lib "Frames" Alias "bbfGetVULevel" (ByVal dsIdx As Long, ByVal vuIdx As Long, ByVal variability As String, ByVal uncertainty As String) As Long
Public Declare Function DLLbbfGetOrganismName Lib "Frames" Alias "bbfGetOrganismName" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal name As String, ByVal id As String) As Long
Public Declare Function DLLbbfGetContamName Lib "Frames" Alias "bbfGetContamName" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLbbfGetSeriesProperties Lib "Frames" Alias "bbfGetSeriesProperties" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByVal concunits As String, ByVal timeunits As String) As Long
'//--------------------------------------------------------------------------------------
'//----------- EPF calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Function epChecksum Lib "Frames" () As Boolean
Public Declare Function epfOpen Lib "Frames" (ByVal FUIName As String, ByVal Source As String) As Long
'epfreaddatasets must be called before using the following functions
Public Declare Sub epfClose Lib "Frames" ()
Public Declare Sub epfAggregate Lib "Frames" (ByVal filename As String, ByVal casList As String)
Public Declare Function epfGetNumRunInfo Lib "Frames" () As Long
Public Declare Function epfGetRunInfo Lib "Frames" (ByVal Idx As Long, ByVal info As String) As Long
Public Declare Function epfGetSetInfo Lib "Frames" (ByVal dsIdx As Long, ByRef numLoc As Long, ByVal typ As String, ByVal med As String, ByVal exp As String) As Long
Public Declare Function epfGetExposurePoint Lib "Frames" (ByVal dsIdx As Long, ByVal locIdx As Long, ByRef xp As Double, ByRef yp As Double) As Long
Public Declare Function epfGetTimeCount Lib "Frames" (ByVal dsIdx As Long, ByVal parencas As String) As Long
Public Declare Function epfGetTime Lib "Frames" (ByVal dsIdx As Long, ByVal parentCAS As String, ByVal timeIdx As Long) As Double
Public Declare Function epfLoadRoutesAndPathwaysByTime Lib "Frames" (ByVal dsIdx As Long, ByVal casid As String, ByVal parentCAS As String, ByVal timeIdx As Long) As Long
Public Declare Sub epfGetRouteAndPathway Lib "Frames" (ByVal dsIdx As Long, ByVal expIdx As Long, ByVal Path As String, ByVal Route As String, ByVal unit As String)
Public Declare Function epfLoadTimeSeries Lib "Frames" (ByVal dsIdx As Long, ByVal locIdx As Long, ByVal casid As String, ByVal parentCAS As String, ByVal Path As String, ByVal Route As String) As Long
'epfloadtimeseries must be called before using the following functions
Public Declare Sub epfGetTimeSeries Lib "Frames" (ByVal dsIdx As Long, ByRef times As Double, ByRef values As Double)
Public Declare Sub epfGetTimeAndValue Lib "Frames" (ByVal dsIdx As Long, ByVal timeIdx As Long, ByRef times As Double, ByRef values As Double)
Public Declare Function epfGetDuration Lib "Frames" (ByVal dsIdx As Long) As Double
'//--------------------------------------------------------------------------------------
'//----------- RIF calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Function rifChecksum Lib "Frames" () As Boolean
Public Declare Function rifOpen Lib "Frames" (ByVal FUIName As String, ByVal Source As String) As Long
'rifreaddatasets must be called before using the following functions
Public Declare Sub rifClose Lib "Frames" ()
Public Declare Sub rifAggregate Lib "Frames" (ByVal filename As String, ByVal casList As String)
Public Declare Function rifGetNumRunInfo Lib "Frames" () As Long
Public Declare Function rifGetRunInfo Lib "Frames" (ByVal Idx As Long, ByVal info As String) As Long
Public Declare Function rifGetSetInfo Lib "Frames" (ByVal dsIdx As Long, ByRef numLoc As Long, ByRef numAge As Long, ByVal typ As String, ByVal med As String, ByVal exp As String) As Long
Public Declare Function rifGetExposurePoint Lib "Frames" (ByVal dsIdx As Long, ByVal locIdx As Long, ByRef xp As Double, ByRef yp As Double) As Long
Public Declare Function rifGetTimeCount Lib "Frames" (ByVal dsIdx As Long, ByVal ageIdx As Long, ByVal parentCAS As String) As Long
